# x2telegram

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  config.claude.example.toml  config.digest.example.toml  config.example.toml  pyproject.toml  x-oauth.env.example
docs/: windows-task-scheduler-playbook.md
examples/: accounts.txt  keywords.txt
prompts/: timeline-summary.md
scripts/: get-windows-scheduled-task-status.ps1  install-windows-scheduled-task.ps1  protect-local-secrets.ps1  remove-windows-scheduled-task.ps1  run-windows-scheduled-task-hidden.vbs  run-windows-scheduled-task.ps1
src/x2telegram/: __init__.py  cli.py  config.py  models.py  pipeline.py  senders.py  sources.py  state.py  summarizers.py
tests/: test_cli.py  test_coding_agent.py  test_config.py  test_default_prompt.py  test_pipeline.py  test_sources.py  test_state.py  test_telegram.py
tests/fixtures/: timeline.json
