[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "x2telegram"
version = "0.4.0"
description = "Read a bounded X timeline with bird, build a digest, and send it to Telegram."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rca32" }]
dependencies = []

[project.scripts]
x2telegram = "x2telegram.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
